annotation for borrowed code

--- a/blackjack_N_step_TD.ipynb
+++ b/blackjack_N_step_TD.ipynb
@@ -39,12 +39,14 @@
     "        self.lr = 0.1\n",
     "    \n",
     "    # give card\n",
+    "    # giveCard() function is borrowed from BlackJack base code\n",
     "    @staticmethod\n",
     "    def giveCard():\n",
     "        # 1 stands for ace\n",
     "        c_list = list(range(1, 11)) + [10, 10, 10]\n",
     "        return np.random.choice(c_list)\n",
     "    \n",
+    "    # dealerPolicy() function is borrowed from BlackJack base code\n",
     "    def dealerPolicy(self, current_value, usable_ace, is_end):\n",
     "        if current_value > 21:\n",
     "            if usable_ace:\n",
@@ -64,7 +66,8 @@
     "            else:\n",
     "                return current_value+card, usable_ace, False\n",
     "            \n",
-    "    # one can only has 1 usable ace               \n",
+    "    # one can only has 1 usable ace   \n",
+    "    # playerPolicy() function is borrowed from BlackJack base code            \n",
     "    def playerPolicy(self, current_value, usable_ace, is_end):\n",
     "        \"\"\"_summary_\n",
     "\n",
@@ -102,7 +105,7 @@
     "        self.state = (0, 0, False)  # initial state\n",
     "        self.end = False\n",
     "        \n",
-    "        \n",
+    "    # modified to implement N-step TD method\n",
     "    def _giveCredit(self,player_value, dealer_value, is_end, n=3, gamma=0.9):\n",
     "        # update state value and win count\n",
     "        if is_end:\n",
