--- a/blackjack_N_step_TD.ipynb
+++ b/blackjack_N_step_TD.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,7 @@
     "        self.player_draw = 0\n",
     "        self.rewards = []\n",
     "        self.lr = 0.1\n",
+    "        self.max_T = []\n",
     "    \n",
     "    # give card\n",
     "    # giveCard() function is borrowed from BlackJack base code\n",
@@ -132,6 +133,7 @@
     "                        self.player_draw += 1\n",
     "                        \n",
     "        T = len(self.rewards) - 1\n",
+    "        self.max_T.append(T)\n",
     "        for timestep in range(T + 1):\n",
     "            tau = timestep - n + 1  # Time to update\n",
     "            if tau >= 0:\n",
@@ -202,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +220,15 @@
       "round 6000\n",
       "round 7000\n",
       "round 8000\n",
-      "round 9000\n"
+      "round 9000\n",
+      "0.8659\n"
      ]
     }
    ],
    "source": [
     "b = BlackJack_N_step()\n",
-    "b.play(10000)"
+    "b.play(10000)\n",
+    "print(\"the maximum length of a game is: \",sum(b.max_T)/len(b.max_T))"
    ]
   },
   {
