--- a/CS_394_Final_Project_Python_Notebook 01.ipynb
+++ b/CS_394_Final_Project_Python_Notebook 01.ipynb
@@ -34,7 +34,8 @@
         "id": "7vRpAmDoAmEX"
       },
       "source": [
-        "This algorithm runs our target policy for a large amount of episodes."
+        "This algorithm runs our target policy for a large amount of episodes.\n",
+        "borrowed from Jeremy's code"
       ]
     },
     {
@@ -1063,15 +1064,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "dY9WFAu7ODru"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "oZElWZf7OFAk"
@@ -1637,8 +1629,7 @@
         "id": "alQUib6xhA7V"
       },
       "source": [
-        "This is our implemented n_Step off policy Sarsa rerun algorithm testing if our generated optimal policy beats the dealer or has some improvement over our original run. Mostly, the class below is borrowed from online article \"Reinforcement Learning — Solving Blackjack\" by Jeremy Zhang.  \n",
-        "Except the part that we use our own list of rewards and the final block of the code in this class \"BlackJack_N_step_Sarsa_eval\" that updates state value by N_step Sarsa method as in page 149 of textbook, \"Off policy n-step Sarsa estimating Q $\\approx$ $q*$\" or $q_\\pi$.  \n"
+        "This is our implemented BlackJack rerun algorithm testing if our generated optimal policy beats the dealer or has some improvement over our original run. Mostly, the class below is borrowed from online article \"Reinforcement Learning — Solving Blackjack\" by Jeremy Zhang.  \n"
       ]
     },
     {
@@ -1801,16 +1792,6 @@
         "\n",
         "            self._giveCredit(player_value,dealer_value,is_end)\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "\n"
       ]
     },
@@ -1894,15 +1875,6 @@
         "Unfortunately we did not beat the dealer, however, we managed to have an improved winning rate from the original 1000000 runs with our fit policy.  \n",
         "The improvement is from 30.6% to 37.4%."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "VcQm9CEPhYiF"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
